--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -8,7 +8,7 @@
       <h4 class="card-title">{{ heroe.nombre }}</h4>
       <p class="card-text">{{ heroe.bio }}</p>
       <p class="card-text"><small class="text-muted">{{ heroe.aparicion }}</small></p>
-      <button class="btn btn-outline-primary btn-block" (click)="verHeroe(i)">Ver más...</button>
+      <button class="btn btn-outline-primary btn-block" (click)="verHeroe(heroe.id)">Ver más...</button>
       <!--<a [routerLink]="['/heroe','i']" class="btn btn-outline-primary btn-block">Ver más...</a>-->
     </div>
   </div>
